# lingtai

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  需求简述.md
docs/: 规范套件说明.md
docs/00_通用规范/: 01_命名与代码风格规范.md  02_API接口设计规范.md  03_数据库设计规范.md  04_前端开发规范.md  05_后端开发规范.md  06_安全规范.md  07_错误处理与日志规范.md  08_Git协作规范.md  09_AI协作规范.md
docs/02_功能设计/: 凌台Loft_实施方案_20260513.md
docs/10_工作流程/: 100_新功能开发工作流程.md  101_已有功能优化升级工作流程.md  102_BUG修复工作流程.md  103_代码审查工作流程.md  104_测试工作流程.md
docs/20_模板/: BUG记录模板.md  代码审查报告模板.md  实施方案设计模板.md  需求分析模板.md
docs/90_最佳实践/: AI协作避坑清单.md  交付前自检清单.md  通用陷阱清单.md
scripts/: build-exe.bat  build-exe.ps1  gen-icons.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diag.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: files.rs  icons.rs  launcher.rs  mod.rs  monitor.rs  ports.rs  settings.rs
src/components/: AddItemsDialog.vue  AppIcon.vue  ContextMenu.vue  PageHeader.vue  PromptDialog.vue  Sidebar.vue  SparkLine.vue  StatCard.vue  TitleBar.vue
src/composables/: useDrop.ts
src/router/: index.ts
src/stores/: launcher.ts  monitor.ts  ports.ts  settings.ts
src/styles/: main.css  themes.css
src/types/: index.ts
src/views/: HudView.vue  LauncherView.vue  MonitorView.vue  PortsView.vue  ResourcesView.vue  SettingsView.vue
