[package]
name = "loft"
version = "0.1.0"
description = "凌台 Loft — 轻量级 Windows 桌面控制台"
authors = ["Loft"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "loft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"

sysinfo = "0.32"
netstat2 = "0.9"
walkdir = "2"
parking_lot = "0.12"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
lnk = "0.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
] }
nvml-wrapper = { version = "0.10", optional = true }

[features]
default = []
gpu-nvml = ["nvml-wrapper"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
